style.css
/****************
 ** All Things **
 ****************/
* {
	margin: 0;
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	overflow-wrap: break-word;
}
/* may need more things here */
.textItem, .item, .buttonContainer button, .avatar, tbody, img {
	vertical-align: top;
}

[hidden] {
	display: none !important;
}

.grow {
	-webkit-flex-grow: 1;
	flex-grow: 1;
	-webkit-flex-shrink: 1;
	flex-shrink: 1;
	-webkit-flex-basis: 0;
	flex-basis: 0;
}

/* all elements with user content, where whitespace should be preserved */
.pre {
	white-space: pre-wrap;
	unicode-bidi: embed;
}

a {
	text-decoration: none;
	color: rgba(0,60,54);
}
a:visited {
	color: rgba(0,60,54);
}
a:hover {
	color: rgb(0,150,136);
}

textarea {
	border-radius: 2px;
	border: 2px solid #00C8B4;
	box-shadow: 0.1rem 0.2rem 0.3rem -0.2rem rgba(13,13,13,0.5);
	max-width: 100%;
	font-family: roboto, sans-serif;
	font-size: 0.8em;
}
select {
	font-size: 1em;
}

sup {vertical-align: super;}
sub {vertical-align: sub;}

.ellipsis {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: pre !important;
}

.ellipsis * {
	white-space: pre !important;
}

.spacer {
	-webkit-flex-grow: 1;
	flex-grow: 1;
}
time {
	color: #333;
	font-size: 0.9em;
	vertical-align: baseline;
}
.rightAlign {
	float: right;
}
.ib {
	display: inline-block;
}

.pageName {
	font-weight: bold;
}

.noColor {
	color: black;
}

body.chatMode .bottomSpacer {
	display: none;
}



.username {
	font-weight: bold;
	unicode-bidi: embed;
	white-space: pre-wrap;
}

.member .avatar {
	margin-right: 0.7ch;
}

input {
	font-size: 0.8em;
}
html {
	background-color: #FEE;
	font-family: roboto, fontello, sans-serif;
}

/* These 3 classes handle like 90% of the layout lol */
.bar { /* contains textitems and items */
	display: block;
	overflow: hidden;
	box-sizing: content-box;
	-webkit-box-sizing: content-box;
	/* set min-height */
}
/*.bar > img:first-child, .bar > .iconBg:first-child {
	margin-left: -0.5rem !important;
}
.bar > img:last-child, .bar > .iconBg:last-child {
	margin-right: -0.5rem !important;
}*/

.textItem { /* basically anything within a .bar */
	max-width: 100%;
	display: inline;
	/* set min-height, line-height */
}
.item { /* for images and other blocks that can't wrap */
	display: inline-block;
	max-width: 100%;
	/* set height */
}

.fill {
	width: 100%;
	height: 100%;
}

.loginField {
	width: 5rem;
}

.tableGrow {
	width: 100%;
}

/**********************
 ** Button Container **
 **********************/
button {
	line-height: normal !important;
	font-size: 0.8em;
	cursor: pointer;
	font-family: roboto, sans-serif;
}
.buttonContainer {
	padding: 1px;
	display: inline-block;
}
.buttonContainer button {
	margin: 0;
	padding: 0 0.5rem;
	background-color: #EEE;
	border: 2px solid gray;
	height: 100%;
	overflow-y: hidden;
	border-style: outset;
	border-radius: 0px;
/*	margin: 0;
	padding: 0 0.5rem;
	background-color: #DDD;
	border: 2px solid gray;
	height: 100%;
	overflow-y: hidden;
	border-color: white #333 #333 white;
	border-radius: 0px;*/
}

.buttonContainer > a {
	width: 100%;
	height: 100%;
	display: inline-block;
}
.buttonContainer button:hover {
	border-color: #59E;
}

.buttonContainer button:active {
	border-style: inset;
}

body {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: column;
	flex-direction: column;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: white;

	/*height: 100vh;*/ /* @@@ */
}

/*************
 ** Top Bar **
 *************/

html.f-error .loadBG {
	background-color: #800;
}

html:not(.f-loggedIn) .loggedIn,
html.f-loggedIn .loggedOut {
	display: none;
}

.navPane .item {
	height: 1.5rem;
}

.navPane .textItem{
	min-height: 1.5rem;
	line-height: 1.5rem;
}

#\$fileView {
	max-width: 100%;
	max-height: 100%;
}

.myAvatar {
	width: 1.5rem;
}

.myName {
	color: white;
	margin: 0 0.5rem;
}

.pathSeparator {
	padding: 0 0.2rem;
}

.pathBar {
	font-weight: bold;
	padding: 0 0.2rem;
	/*box-shadow: inset 0 -2px 3px rgba(0,0,0,0.3);*/
}

/*html.f-chatMode .pageMode,
html:not(.f-chatMode) .chatMode {
	display: none;
}*/

#\$chatContainer {
	flex-basis: auto;
	overflow-y: hidden;
	height: 50%;
}

.bottomBorder {
	border-bottom: 1px solid gray;
}

table.tabs {
	width: 100%;
}

table.tabs td {
	margin: 0;
	padding: 0;
	text-align: center;
	border-right: 1px solid gray;
}

table.tabs td button {
	width: 100%;
	height: 100%;
	border: none;
}

table.tabs td:last-child {
	border-right: none;
}

.myUserBar {
	background-color: #EEE;
}

html.f-sidebarFile .sidebarNotFile,
html:not(.f-sidebarFile) .sidebarFile,
html.f-sidebarUploaded .sidebarUploadingFile,
html:not(.f-sidebarUploaded) .sidebarUploadedFile {
	display: none;
}

/****************
 ** Title Pane **
 ****************/
.titlePane {
	-webkit-flex-shrink: 0;
	flex-shrink: 0;
	border-bottom: 2px solid black;
	background-color: #FFF;
	box-shadow: 0 2px 3px rgba(0,0,0,0.3);
	z-index: 10;
	padding: 1px;
	/*-webkit-transition: background-color 0.1s ease;
	transition: background-color 0.1s ease;*/
}

.status-idle > .avatar {
	filter: grayscale(1);
}

html.f-loading .loadBG {
	background-color: #ABDDD6;
}

.titlePane .iconBg {
	width: 2rem;
}

.editingLabel {
	padding-left: 0.3rem;
	font-weight: bold;
}
.pageTitle {
	font-weight: bold;
	padding-right: 0.5rem;
	font-size: 1.6rem;
}

html:not(.f-canEdit) .canEdit {
	display: none;
}

.errorMode .titlePane {
	color: maroon;
	font-family: monospace;
}

header > :first-child {
	min-width: 0.3rem;
	display: inline-block;
}

#\$authorBox .username {
	margin-right: 0.3rem;
}

/*******************************
 ** content+sidebar container **
 *******************************/
horizontal-split {
	display: flex;
	display: -webkit-flex;
	-webkit-flex-direction: row;
	flex-direction: row;
	overflow-x: hidden;
}

.errorPage {
	padding: 0.2rem;
	font-family: monospace;
}
/* ... */

